k8s-deployments/05-preview-environments/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview-environment
spec:
  replicas: SPECIFIED_BY_OVERLAYS
  template:
    spec:
      containers:
        - name: gitops-test-env
          image: ghcr.io/lukma99/gitops-test-env:SPECIFIED_BY_OVERLAYS
          ports:
            - containerPort: 80
