k8s-deployments/05-preview-environments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preview-environment
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 10000
      protocol: TCP
      targetPort: 80
